верстаем страницу каталога

--- a/catalog.html
+++ b/catalog.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/catalog.css">
   <title>Title</title>
 </head>
 <body>
@@ -30,187 +30,236 @@
   <!-- ** -->
 
   <main>
-    <section class="promo">
-      <div class="container promo__wrapper">
-        <div class="promo__title">
-          <h1>THE BRAND OF LUXERIOUS <span class="promo__decor">FASHION</span></h1>
+    <section class="catalog__promo">
+      <div class="container catalog__promo-wrapper">
+        <div class="catalog__promo-left">
+          <h1>NEW ARRIVALS</h1>
+        </div>
+
+        <div class="catalog__promo-right">
+          <p>HOME / MEN / <span>NEW ARRIVALS</span></p>
         </div>
       </div>
     </section>
 
     <!-- ** -->
 
-    <section class="category">
+    <section class="catalog__products">
       <div class="container">
-        <div class="category__wrapper">
-
-          <div class="category__item">
-            <div class="category__mask">
-              <div class="category__block">
-                <p>30% off</p>
-                <p>for woman</p>
-              </div>
+        <div class="catalog__products-menu">
+          <div class="catalog__products-menu_left">
+            <div class="catalog__products-menu_filter">
+              <p>Filter -</p>
             </div>
           </div>
 
-          <div class="category__item">
-            <div class="category__mask">
-              <div class="category__block">
-                <p>hot deal</p>
-                <p>for men</p>
-              </div>
-            </div>
-          </div>
+          <div class="catalog__products-menu_right">
+            <div class="catalog__products-menu_attributes">
+              <select class="catalog__products-select">
+                <option value="0">Trending now</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+              </select>
 
-          <div class="category__item">
-            <div class="category__mask">
-              <div class="category__block">
-                <p>new arrivals</p>
-                <p>for kids</p>
-              </div>
-            </div>
-          </div>
+              <select class="catalog__products-select">
+                <option value="0">Size</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+              </select>
 
-          <div class="category__item">
-            <div class="category__mask">
-              <div class="category__block">
-                <p>luxirous & trendy</p>
-                <p>accesories</p>
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </section>
-
-    <!-- ** -->
-
-    <section class="products">
-      <div class="container">
-        <div class="products__chapter">
-          <h2>Fetured Items</h2>
-          <p>Shop for items based on what we featured in this week</p>
-        </div>
-
-        <div class="products__wrapper">
-          <div class="products__item">
-            <img class="products__img" src="img/product-1.jpeg"/>
-
-            <div class="products__info">
-              <p class="products__title">
-                ELLERY X M'O CAPSULE
-              </p>
-
-              <p class="products__description">
-                Known for her sculptural takes on traditional tailoring,
-                Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-              </p>
-
-              <p class="products__price">
-                $52.00
-              </p>
-            </div>
-          </div>
-
-          <div class="products__item">
-            <img class="products__img" src="img/product-2.jpeg"/>
-
-            <div class="products__info">
-              <p class="products__title">
-                ELLERY X M'O CAPSULE
-              </p>
-
-              <p class="products__description">
-                Known for her sculptural takes on traditional tailoring,
-                Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-              </p>
-
-              <p class="products__price">
-                $52.00
-              </p>
-            </div>
-          </div>
-
-          <div class="products__item">
-            <img class="products__img" src="img/product-3.jpeg"/>
-
-            <div class="products__info">
-              <p class="products__title">
-                ELLERY X M'O CAPSULE
-              </p>
-
-              <p class="products__description">
-                Known for her sculptural takes on traditional tailoring,
-                Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-              </p>
-
-              <p class="products__price">
-                $52.00
-              </p>
-            </div>
-          </div>
-
-          <div class="products__item">
-            <img class="products__img" src="img/product-4.jpeg"/>
-
-            <div class="products__info">
-              <p class="products__title">
-                ELLERY X M'O CAPSULE
-              </p>
-
-              <p class="products__description">
-                Known for her sculptural takes on traditional tailoring,
-                Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-              </p>
-
-              <p class="products__price">
-                $52.00
-              </p>
-            </div>
-          </div>
-
-          <div class="products__item">
-            <img class="products__img" src="img/product-5.jpeg"/>
-
-            <div class="products__info">
-              <p class="products__title">
-                ELLERY X M'O CAPSULE
-              </p>
-
-              <p class="products__description">
-                Known for her sculptural takes on traditional tailoring,
-                Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-              </p>
-
-              <p class="products__price">
-                $52.00
-              </p>
-            </div>
-          </div>
-
-          <div class="products__item">
-            <img class="products__img" src="img/product-6.jpeg"/>
-
-            <div class="products__info">
-              <p class="products__title">
-                ELLERY X M'O CAPSULE
-              </p>
-
-              <p class="products__description">
-                Known for her sculptural takes on traditional tailoring,
-                Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-              </p>
-
-              <p class="products__price">
-                $52.00
-              </p>
+              <select class="catalog__products-select">
+                <option value="0">Price</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+              </select>
             </div>
           </div>
         </div>
 
-        <div class="products__button">
-          <a href="#">Browse All Product</a>
+        <div class="catalog__products-wrapper">
+          <div class="product__item">
+            <img class="product__img" src="img/product-1.jpeg"/>
+
+            <div class="products__info">
+              <p class="products__title">
+                ELLERY X M'O CAPSULE
+              </p>
+
+              <p class="products__description">
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+              </p>
+
+              <p class="products__price">
+                $52.00
+              </p>
+            </div>
+          </div>
+
+          <div class="products__item">
+            <img class="product__img" src="img/product-7.jpeg"/>
+
+            <div class="products__info">
+              <p class="products__title">
+                ELLERY X M'O CAPSULE
+              </p>
+
+              <p class="products__description">
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+              </p>
+
+              <p class="products__price">
+                $52.00
+              </p>
+            </div>
+          </div>
+
+          <div class="products__item">
+            <img class="product__img" src="img/product-3.jpeg"/>
+
+            <div class="products__info">
+              <p class="products__title">
+                ELLERY X M'O CAPSULE
+              </p>
+
+              <p class="products__description">
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+              </p>
+
+              <p class="products__price">
+                $52.00
+              </p>
+            </div>
+          </div>
+
+          <div class="products__item">
+            <img class="product__img" src="img/product-4.jpeg"/>
+
+            <div class="products__info">
+              <p class="products__title">
+                ELLERY X M'O CAPSULE
+              </p>
+
+              <p class="products__description">
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+              </p>
+
+              <p class="products__price">
+                $52.00
+              </p>
+            </div>
+          </div>
+
+          <div class="products__item">
+            <img class="product__img" src="img/product-8.jpeg"/>
+
+            <div class="products__info">
+              <p class="products__title">
+                ELLERY X M'O CAPSULE
+              </p>
+
+              <p class="products__description">
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+              </p>
+
+              <p class="products__price">
+                $52.00
+              </p>
+            </div>
+          </div>
+
+          <div class="products__item">
+            <img class="product__img" src="img/product-12.jpeg"/>
+
+            <div class="products__info">
+              <p class="products__title">
+                ELLERY X M'O CAPSULE
+              </p>
+
+              <p class="products__description">
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+              </p>
+
+              <p class="products__price">
+                $52.00
+              </p>
+            </div>
+          </div>
+
+          <div class="products__item">
+            <img class="product__img" src="img/product-11.jpeg"/>
+
+            <div class="products__info">
+              <p class="products__title">
+                ELLERY X M'O CAPSULE
+              </p>
+
+              <p class="products__description">
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+              </p>
+
+              <p class="products__price">
+                $52.00
+              </p>
+            </div>
+          </div>
+
+          <div class="products__item">
+            <img class="product__img" src="img/product-9.jpeg"/>
+
+            <div class="products__info">
+              <p class="products__title">
+                ELLERY X M'O CAPSULE
+              </p>
+
+              <p class="products__description">
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+              </p>
+
+              <p class="products__price">
+                $52.00
+              </p>
+            </div>
+          </div>
+
+          <div class="products__item">
+            <img class="product__img" src="img/product-10.jpeg"/>
+
+            <div class="products__info">
+              <p class="products__title">
+                ELLERY X M'O CAPSULE
+              </p>
+
+              <p class="products__description">
+                Known for her sculptural takes on traditional tailoring,
+                Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+              </p>
+
+              <p class="products__price">
+                $52.00
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="products__pagination">
+          <div class="pagination">
+            <a href="#">&#60;</a>
+            <a href="#">1</a>
+            <a href="#" class="active">2</a>
+            <a href="#">3</a>
+            <a href="#">4</a>
+            <a href="#">5</a>
+            <a href="#">6</a>
+            <a href="#">&#62;</a>
+          </div>
         </div>
       </div>
     </section>
@@ -264,7 +313,7 @@
                      placeholder="Enter Your Email"
                      autofocus
                      required
-                     pattern="\S+[A-zz-z]"
+                     pattern="\S+[А-яа-я]"
                      class="footer__subscribe_search-input">
 
               <input type="submit"
@@ -330,100 +379,3 @@
   </footer>
 </body>
 </html>
-
-<!--
-
-NOTE:
-
-простой лайфхак слайдер:
-
-<div class="one">
-  <div class="two" style="width: 70%;"></div>
-</div>
-
--
-
-.one {
-  width: 300px;
-  height: 50px;
-  outline: 1px solid green;
-  border-right: 10px;
-}
-
-.two {
-  height: 50px;
-  border-radius: 10px;
-  background: green;
-}
-
----
-
-Полезные теги:
-
----
-
-<details class="test">
-  <summary>test</summary>
-  <p>Lorem ipsum dolor...</p>
-</details>
-
-.test[open] summary {...}
-
-.test[open] {
-  background: green;
-}
-
----
-
-Комбинированый список, используется в формах
-
-<fieldset>
-    <legend>Контактная информация</legend>
-      <label for="name">Фамилия <em>*</em></label>
-      <input id="name"><br>
-      <label for="name">Имя <em>*</em></label>
-      <input id="name"><br>
-      <label for="name">Отчество</label>
-      <input id="name"><br>
-      <label for="telephone">Телефон <em>*</em></label>
-      <input id="telephone"><br>
-      <label for="email">Email <em>*</em></label>
-      <input id="email"><br>
-  </fieldset>
-<fieldset>
-
----
-
-Регулярки
-
-[A-Z]{3}-[0-9]{3}
-Квадратные скобки в начале строки определяют диапазон допустимых символов.
-Иными словами, группа [A-Z] разрешает любые прописные буквы от А до Z.
-Следующая за ней часть в фигурных скобках указывает множитель,
-т.е. {3} означает, что нужны три прописные буквы. Следующее тире не имеет
-никакого специального значения и означает само себя, т.е. указывает, что
-после трех прописных букв должно быть тире. Наконец, [0-9] означает цифры
-в диапазоне от 0 до 9, а {3} требует три таких цифры.
-
----
-
-Прогрессы
-
-<progress value="0.25"></progress>
-<progress value="50" max="200"></progress>
-<meter min="5" max="70" value="28"> 28 метров</meter>
-
----
-
-figure - HTML-элемент <figure> (Иллюстрация с необязательной подписью)
-представляет самостоятельный контент, часто с подписью
-(заголовком), которая указывается с помощью элемента (<figcaption>).
-Диаграмма и её подпись представляет собой единое целое.
-
-<figure>
-    <img src="/media/cc0-images/elephant-660-480.jpg"
-         alt="Elephant at sunset">
-    <figcaption>An elephant at sunset</figcaption>
-</figure>
-
--->
