верстаем страницу корзины

--- a/cart.html
+++ b/cart.html
@@ -44,151 +44,114 @@
     <section class="breadcrumb__chapter">
       <div class="container breadcrumb__wrapper">
         <div class="breadcrumb__left">
-          <h1>NEW ARRIVALS</h1>
+          <h1>SHOPPING CART</h1>
         </div>
 
         <div class="breadcrumb__right">
-          <p>HOME / MEN / <span>NEW ARRIVALS</span></p>
+
         </div>
       </div>
     </section>
 
     <!-- ** -->
 
-    <section class="product__slider">
-      <div class="product__slider-control_left product__slider-control">
-        <a href="#">
-          <i class="fas fa-angle-left"></i>
-        </a>
-      </div>
-      <div class="product__slider-content">
-        <img src="src/img/product-slider-1.png" alt="">
-      </div>
-      <div class="product__slider-control_right product__slider-control">
-        <a href="#">
-          <i class="fas fa-angle-right"></i>
-        </a>
-      </div>
-    </section>
+
 
     <!-- ** -->
 
-    <section class="product__detail container">
-      <div class="product__type">
-        <p>Women collection</p>
-      </div>
+    <section class="cart">
+      <div class="cart__wrapper container">
 
-      <div class="product__title">
-        <h1>MOSCHINO CHEAP AND CHIC</h1>
-      </div>
+        <div class="cart__left">
 
-      <div class="product__description">
-        <p>Compellingly actualize fully researched processes before proactive
-          outsourcing. Progressively syndicate collaborative architectures
-          before cutting-edge services. Completely visualize parallel core
-          competencies rather than exceptional portals. </p>
-      </div>
+          <div class="cart__product">
+            <div class="cart__product-image">
+              <img src="src/img/product-3.jpeg" alt="">
+            </div>
 
-      <div class="product__price">
-        <p>$561</p>
-      </div>
+            <div class="cart__product-info">
+              <div class="cart__product-title">
+                <p>MANGO  PEOPLE  T-SHIRT</p>
+              </div>
 
-      <div class="product__parameters">
-        <select class="product__select">
-          <option value="0">Choise color</option>
-          <option value="1">1</option>
-          <option value="2">2</option>
-        </select>
-
-        <select class="product__select">
-          <option value="0">Choise size</option>
-          <option value="1">1</option>
-          <option value="2">2</option>
-        </select>
-
-        <select class="product__select">
-          <option value="0">QuantitY</option>
-          <option value="1">1</option>
-          <option value="2">2</option>
-        </select>
-      </div>
-
-      <div class="product__button">
-        <a href="#">Add to Cart</a>
-      </div>
-    </section>
-
-    <!-- ** -->
-
-    <section class="product__recommended container">
-      <div class="product__recommended-wrapper">
-        <div class="products__item">
-          <div class="products__img">
-            <img src="src/img/product-4.jpeg"/>
+              <div class="cart__product-details">
+                <p class="cart__product-detail_price">Price: <span>$300</span></p>
+                <p class="cart__product-details_color">Color: Red</p>
+                <p class="cart__product-details_size">Size: XI</p>
+                <p class="cart__product-details_quantity">
+                  Quantity:
+                  <input type="text"
+                         value="0"
+                         placeholder="кол-во">
+                </p>
+              </div>
+            </div>
+            <div class="cart__product-close">
+              <a href="#">&#215;</a>
+            </div>
           </div>
 
-          <div class="products__info">
-            <p class="products__title">
-              ELLERY X M'O CAPSULE
-            </p>
+          <div class="cart__product">
+            <div class="cart__product-image">
+              <img src="src/img/product-3.jpeg" alt="">
+            </div>
 
-            <p class="products__description">
-              Known for her sculptural takes on traditional tailoring,
-              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-            </p>
+            <div class="cart__product-info">
+              <div class="cart__product-title">
+                <p>MANGO  PEOPLE  T-SHIRT</p>
+              </div>
 
-            <p class="products__price">
-              $52.00
-            </p>
+              <div class="cart__product-details">
+                <p class="cart__product-detail_price">Price: <span>$300</span></p>
+                <p class="cart__product-details_color">Color: Red</p>
+                <p class="cart__product-details_size">Size: XI</p>
+                <p class="cart__product-details_quantity">
+                  Quantity:
+                  <input type="text"
+                         value="0"
+                         placeholder="кол-во">
+                </p>
+              </div>
+            </div>
+            <div class="cart__product-close">
+              <a href="#">&#215;</a>
+            </div>
+          </div>
+
+          <div class="cart__product-buttons">
+            <a href="#">CLEAR SHOPPING CART</a>
+            <a href="#">CONTINUE SHOPPING</a>
           </div>
         </div>
 
-        <div class="products__item">
-          <div class="products__video">
-            <video src="src/video/waves.mp4"
-                   controls
-                   loop
-                   muted
-                   autoplay
-                   width="400"
-                   height="300">
-            </video>
+        <!-- ** -->
+
+        <div class="cart__right">
+          <div class="cart__feedback">
+            <div class="cart__feedback-title">
+              <h1>Shipping address</h1>
+            </div>
+
+            <div class="cart__feedback-address">
+              <input type="text" placeholder="Bangladesh" value="">
+              <input type="text" placeholder="State" value="">
+              <input type="text" placeholder="Postcode / Zip" value="">
+            </div>
+
+            <div class="cart__feedback-button">
+              <button>Get a quote</button>
+            </div>
           </div>
 
-          <div class="products__info">
-            <p class="products__title">
-              ELLERY X M'O CAPSULE
-            </p>
+          <div class="cart__summary">
+            <div class="cart__summary-price">
+              <p>SUB TOTAL <span>$900</span></p>
+              <p>GRAND TOTAL <span class="cart__summary-price_red">$900</span></p>
+            </div>
 
-            <p class="products__description">
-              Known for her sculptural takes on traditional tailoring,
-              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-            </p>
-
-            <p class="products__price">
-              $52.00
-            </p>
-          </div>
-        </div>
-
-        <div class="products__item">
-          <div class="products__img">
-            <img src="src/img/product-6.jpeg"/>
-          </div>
-
-          <div class="products__info">
-            <p class="products__title">
-              ELLERY X M'O CAPSULE
-            </p>
-
-            <p class="products__description">
-              Known for her sculptural takes on traditional tailoring,
-              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
-            </p>
-
-            <p class="products__price">
-              $52.00
-            </p>
+            <div class="cart__summary-button">
+              <button>PROCEED TO CHECKOUT</button>
+            </div>
           </div>
         </div>
       </div>
