--- a/catalog.html
+++ b/catalog.html
@@ -2,22 +2,35 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/catalog.css">
+  <link rel="stylesheet" href="src/css/style.css">
+
+  <!-- NOTE: additional lib's -->
+
+  <!-- NOTE: используется когда макет сделан на fontawesome
+   если в макете лишь пару иконок то проще скачать из SVG и рендерить
+   чем подключать всю библиотеку, тк она оч тяжелая, в данном примере
+   мы испольщуем его только для футера в обучающих целях -->
+  <script src="https://kit.fontawesome.com/905c41fdf2.js"
+          crossorigin="anonymous">
+  </script>
+
   <title>Title</title>
+  <link rel="stylesheet"
+        href="../../../../../../Volumes/Datacenter-1/MyData/Programming/Web/Projects/[ Интенсив ]/Fullstack Development/Project-2/src/styles.sass">
 </head>
 <body>
   <header class="header">
     <div class="container header__wrapper">
       <nav class="header__left">
         <a href="index.html" class="header__logo">
-          <img src="img/logo.png" alt="">
+          <img src="src/img/logo.png" alt="">
         </a>
-        <img src="img/search.png" alt="">
+        <img src="src/img/search.png" alt="">
       </nav>
 
       <nav class="header__right">
-        <img class="header__item" src="img/burger.png" alt="">
-        <img class="header__item" src="img/login.png" alt="">
+        <img class="header__item" src="src/img/burger.png" alt="">
+        <img class="header__item" src="src/img/login.png" alt="">
         <svg width="42" height="37" viewBox="0 0 42 37" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M26.2009 37C25.5532 36.9738 24.9415 36.6948 24.4972 36.2227C24.0529 35.7506 23.8114 35.1232 23.8245 34.475C23.8376 33.8269 24.1043 33.2097 24.5673 32.7559C25.0303 32.3022 25.6527 32.048 26.301 32.048C26.9493 32.048 27.5717 32.3022 28.0347 32.7559C28.4977 33.2097 28.7644 33.8269 28.7775 34.475C28.7906 35.1232 28.549 35.7506 28.1047 36.2227C27.6604 36.6948 27.0488 36.9738 26.401 37H26.2009ZM6.75293 34.32C6.75293 33.79 6.91011 33.2718 7.20459 32.8311C7.49907 32.3904 7.91764 32.0469 8.40735 31.844C8.89705 31.6412 9.43594 31.5881 9.95581 31.6915C10.4757 31.7949 10.9532 32.0502 11.328 32.425C11.7028 32.7998 11.9581 33.2773 12.0615 33.7972C12.1649 34.317 12.1118 34.8559 11.9089 35.3456C11.7061 35.8353 11.3626 36.2539 10.9219 36.5483C10.4812 36.8428 9.96304 37 9.43298 37C9.08087 37.0003 8.73212 36.9311 8.40674 36.7966C8.08136 36.662 7.78569 36.4646 7.53662 36.2158C7.28755 35.9669 7.09001 35.6713 6.9552 35.3461C6.82039 35.0208 6.75098 34.6721 6.75098 34.32H6.75293ZM10.553 28.686C10.2935 28.6868 10.0409 28.6024 9.83411 28.4457C9.62727 28.2891 9.47758 28.0689 9.40796 27.819L4.57495 10.364H1.18201C0.868521 10.364 0.567859 10.2395 0.346191 10.0178C0.124523 9.79614 0 9.49549 0 9.18201C0 8.86852 0.124523 8.56787 0.346191 8.3462C0.567859 8.12454 0.868521 8.00001 1.18201 8.00001H5.46301C5.7225 7.99919 5.97504 8.08372 6.18176 8.24057C6.38848 8.39742 6.53784 8.61788 6.60693 8.86801L11.4399 26.323H24.6179L29.001 16.275H14.401C14.2428 16.2796 14.0854 16.2524 13.9379 16.1951C13.7904 16.1377 13.6559 16.0513 13.5424 15.9411C13.4288 15.8308 13.3386 15.6989 13.277 15.5532C13.2154 15.4074 13.1836 15.2508 13.1836 15.0925C13.1836 14.9343 13.2154 14.7776 13.277 14.6319C13.3386 14.4861 13.4288 14.3542 13.5424 14.2439C13.6559 14.1337 13.7904 14.0473 13.9379 13.9899C14.0854 13.9326 14.2428 13.9054 14.401 13.91H30.814C31.0097 13.91 31.2022 13.9587 31.3744 14.0517C31.5465 14.1448 31.6928 14.2793 31.7999 14.443C31.9078 14.6073 31.9734 14.7957 31.9908 14.9914C32.0083 15.1872 31.9771 15.3842 31.9 15.565L26.495 27.977C26.4026 28.1876 26.251 28.3668 26.0585 28.4927C25.866 28.6186 25.641 28.6858 25.411 28.686H10.553Z" fill="#E8E8E8"/>
 <!--          <path d="M31.502 19C36.7487 19 41.002 14.7467 41.002 9.5C41.002 4.25329 36.7487 0 31.502 0C26.2552 0 22.002 4.25329 22.002 9.5C22.002 14.7467 26.2552 19 31.502 19Z" fill="#F16D7F"/>-->
@@ -50,7 +63,104 @@
         <div class="catalog__products-menu">
           <div class="catalog__products-menu_left">
             <div class="catalog__products-menu_filter">
-              <p>Filter -</p>
+
+              <details class="filter">
+                <summary>Filter <i class="fas fa-sort-amount-up"></i></summary>
+
+                <div class="filter__content">
+
+                  <details class="filter__title">
+                    <summary>Category</summary>
+
+                    <ul class="filter__list">
+                      <li class="filter__item">
+                        <a href="#" class="filter__link">Accessories</a>
+                      </li>
+
+                      <li class="filter__item">
+                        <a href="#" class="filter__link">Bags</a>
+                      </li>
+
+                      <li class="filter__item">
+                        <a href="#" class="filter__link">Denim</a>
+                      </li>
+
+                      <li class="filter__item">
+                        <a href="#" class="filter__link">Hoodies & Sweatshirts</a>
+                      </li>
+
+                      <li class="filter__item">
+                        <a href="#" class="filter__link">Jackets & Coats</a>
+                      </li>
+
+                      <li class="filter__item">
+                        <a href="#" class="filter__link">Polos</a>
+                      </li>
+
+                      <li class="filter__item">
+                        <a href="#" class="filter__link">Shirts</a>
+                      </li>
+
+                      <li class="filter__item">
+                        <a href="#" class="filter__link"> Shoes</a>
+                      </li>
+
+                      <li class="filter__item">
+                        <a href="#" class="filter__link">Sweaters & Knits</a>
+                      </li>
+
+                      <li class="filter__item">
+                        <a href="#" class="filter__link">T-shirts</a>
+                      </li>
+
+                      <li class="filter__item">
+                        <a href="#" class="filter__link">Tanks</a>
+                      </li>
+
+
+                    </ul>
+                  </details>
+
+                  <details class="filter__title">
+                    <summary>Brand</summary>
+
+                    <ul class="filter__list">
+                      <li class="filter__item">
+                        <a href="#" class="filter__link">1</a>
+                      </li>
+
+                      <li class="filter__item">
+                        <a href="#" class="filter__link">2</a>
+                      </li>
+
+                      <li class="filter__item">
+                        <a href="#" class="filter__link">3</a>
+                      </li>
+                    </ul>
+                  </details>
+
+                  <details class="filter__title">
+                    <summary>Designer</summary>
+
+                    <ul class="filter__list">
+                      <li class="filter__item">
+                        <a href="#" class="filter__link">1</a>
+                      </li>
+
+                      <li class="filter__item">
+                        <a href="#" class="filter__link">2</a>
+                      </li>
+
+                      <li class="filter__item">
+                        <a href="#" class="filter__link">3</a>
+                      </li>
+                    </ul>
+                  </details>
+
+                </div>
+
+              </details>
+
             </div>
           </div>
 
@@ -80,7 +190,7 @@
         <div class="catalog__products-wrapper">
           <div class="product__item">
             <div class="product__img">
-              <img src="img/product-1.jpeg"/>
+              <img src="src/img/product-1.jpeg"/>
             </div>
 
             <div class="products__info">
@@ -101,7 +211,7 @@
 
           <div class="product__item">
             <div class="product__img">
-              <img src="img/product-7.jpeg"/>
+              <img src="src/img/product-7.jpeg"/>
             </div>
 
             <div class="products__info">
@@ -122,7 +232,7 @@
 
           <div class="product__item">
             <div class="product__img">
-              <img src="img/product-3.jpeg"/>
+              <img src="src/img/product-3.jpeg"/>
             </div>
 
             <div class="products__info">
@@ -143,7 +253,7 @@
 
           <div class="product__item">
             <div class="product__img">
-              <img src="img/product-4.jpeg"/>
+              <img src="src/img/product-4.jpeg"/>
             </div>
 
             <div class="products__info">
@@ -164,7 +274,7 @@
 
           <div class="product__item">
             <div class="product__img">
-              <img src="img/product-8.jpeg"/>
+              <img src="src/img/product-8.jpeg"/>
             </div>
 
             <div class="products__info">
@@ -185,7 +295,7 @@
 
           <div class="product__item">
             <div class="product__img">
-              <img src="img/product-12.jpeg"/>
+              <img src="src/img/product-12.jpeg"/>
             </div>
 
             <div class="products__info">
@@ -206,7 +316,7 @@
 
           <div class="product__item">
             <div class="product__img">
-              <img src="img/product-11.jpeg"/>
+              <img src="src/img/product-11.jpeg"/>
             </div>
 
             <div class="products__info">
@@ -227,7 +337,7 @@
 
           <div class="product__item">
             <div class="product__img">
-              <img src="img/product-9.jpeg"/>
+              <img src="src/img/product-9.jpeg"/>
             </div>
 
             <div class="products__info">
@@ -248,7 +358,7 @@
 
           <div class="product__item">
             <div class="product__img">
-              <img src="img/product-10.jpeg"/>
+              <img src="src/img/product-10.jpeg"/>
             </div>
 
             <div class="products__info">
@@ -288,21 +398,21 @@
     <section class="services">
       <div class="services__wrapper container">
         <div class="services__item">
-          <img src="img/services-1.png" alt="" class="services__img">
+          <img src="src/img/services-1.png" alt="" class="services__img">
           <h3 class="services__title">Free Delivery</h3>
           <p class="services__description">Worldwide delivery on all.
             Authorit tively morph next-generation innov tion with extensive models.</p>
         </div>
 
         <div class="services__item">
-          <img src="img/services-2.png" alt="" class="services__img">
+          <img src="src/img/services-2.png" alt="" class="services__img">
           <h3 class="services__title">Sales & discounts</h3>
           <p class="services__description">Worldwide delivery on all.
             Authorit tively morph next-generation innov tion with extensive models.</p>
         </div>
 
         <div class="services__item">
-          <img src="img/services-3.png" alt="" class="services__img">
+          <img src="src/img/services-3.png" alt="" class="services__img">
           <h3 class="services__title">Quality assurance</h3>
           <p class="services__description">Worldwide delivery on all.
             Authorit tively morph next-generation innov tion with extensive models.</p>
@@ -317,7 +427,7 @@
     <section class="footer__subscribe">
       <div class="footer__subscribe-wrapper container">
         <div class="footer__subscribe-left">
-          <img src="img/subscribe-1.png" alt="">
+          <img src="src/img/subscribe-1.png" alt="">
           <p class="footer__subscribe-description">“Vestibulum quis porttitor dui!
             Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
         </div>
