верстаем страницу регистрации

--- a/catalog.html
+++ b/catalog.html
@@ -188,11 +188,15 @@
         </div>
 
         <div class="catalog__products-wrapper">
-          <div class="product__item">
-            <div class="product__img">
+          <div class="products__item">
+            <div class="products__img">
               <img src="src/img/product-1.jpeg"/>
             </div>
 
+            <div class="products__overlay">
+              <button>Add to Cart</button>
+            </div>
+
             <div class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
@@ -209,11 +213,15 @@
             </div>
           </div>
 
-          <div class="product__item">
-            <div class="product__img">
+          <div class="products__item">
+            <div class="products__img">
               <img src="src/img/product-7.jpeg"/>
             </div>
 
+            <div class="products__overlay">
+              <button>Add to Cart</button>
+            </div>
+
             <div class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
@@ -230,11 +238,15 @@
             </div>
           </div>
 
-          <div class="product__item">
-            <div class="product__img">
+          <div class="products__item">
+            <div class="products__img">
               <img src="src/img/product-3.jpeg"/>
             </div>
 
+            <div class="products__overlay">
+              <button>Add to Cart</button>
+            </div>
+
             <div class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
@@ -251,11 +263,15 @@
             </div>
           </div>
 
-          <div class="product__item">
-            <div class="product__img">
+          <div class="products__item">
+            <div class="products__img">
               <img src="src/img/product-4.jpeg"/>
             </div>
 
+            <div class="products__overlay">
+              <button>Add to Cart</button>
+            </div>
+
             <div class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
@@ -272,11 +288,15 @@
             </div>
           </div>
 
-          <div class="product__item">
-            <div class="product__img">
+          <div class="products__item">
+            <div class="products__img">
               <img src="src/img/product-8.jpeg"/>
             </div>
 
+            <div class="products__overlay">
+              <button>Add to Cart</button>
+            </div>
+
             <div class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
@@ -293,11 +313,15 @@
             </div>
           </div>
 
-          <div class="product__item">
-            <div class="product__img">
+          <div class="products__item">
+            <div class="products__img">
               <img src="src/img/product-12.jpeg"/>
             </div>
 
+            <div class="products__overlay">
+              <button>Add to Cart</button>
+            </div>
+
             <div class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
@@ -314,11 +338,15 @@
             </div>
           </div>
 
-          <div class="product__item">
-            <div class="product__img">
+          <div class="products__item">
+            <div class="products__img">
               <img src="src/img/product-11.jpeg"/>
             </div>
 
+            <div class="products__overlay">
+              <button>Add to Cart</button>
+            </div>
+
             <div class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
@@ -335,11 +363,15 @@
             </div>
           </div>
 
-          <div class="product__item">
-            <div class="product__img">
+          <div class="products__item">
+            <div class="products__img">
               <img src="src/img/product-9.jpeg"/>
             </div>
 
+            <div class="products__overlay">
+              <button>Add to Cart</button>
+            </div>
+
             <div class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
@@ -356,9 +388,13 @@
             </div>
           </div>
 
-          <div class="product__item">
-            <div class="product__img">
+          <div class="products__item">
+            <div class="products__img">
               <img src="src/img/product-10.jpeg"/>
+            </div>
+
+            <div class="products__overlay">
+              <button>Add to Cart</button>
             </div>
 
             <div class="products__info">
