--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
               <img src="src/img/product-1.jpeg"/>
             </div>
 
+            <div class="products__overlay">
+              <button>Add to Cart</button>
+            </div>
+
             <div class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
@@ -129,6 +133,10 @@
           <div class="products__item">
             <div class="products__img">
               <img src="src/img/product-2.jpeg"/>
+            </div>
+
+            <div class="products__overlay">
+              <button>Add to Cart</button>
             </div>
 
             <div class="products__info">
@@ -152,6 +160,10 @@
               <img src="src/img/product-3.jpeg"/>
             </div>
 
+            <div class="products__overlay">
+              <button>Add to Cart</button>
+            </div>
+
             <div class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
@@ -171,6 +183,10 @@
           <div class="products__item">
             <div class="products__img">
               <img src="src/img/product-4.jpeg"/>
+            </div>
+
+            <div class="products__overlay">
+              <button>Add to Cart</button>
             </div>
 
             <div class="products__info">
@@ -194,6 +210,10 @@
               <img src="src/img/product-5.jpeg"/>
             </div>
 
+            <div class="products__overlay">
+              <button>Add to Cart</button>
+            </div>
+
             <div class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
@@ -213,6 +233,10 @@
           <div class="products__item">
             <div class="products__img">
               <img src="src/img/product-6.jpeg"/>
+            </div>
+
+            <div class="products__overlay">
+              <button>Add to Cart</button>
             </div>
 
             <div class="products__info">
