--- a/index.html
+++ b/index.html
@@ -117,37 +117,37 @@
 
           <div class="category__item">
             <div class="category__mask">
-              <div class="category__block">
+              <a href="#" class="category__block">
                 <p>30% off</p>
                 <p>for woman</p>
-              </div>
+              </a>
             </div>
           </div>
 
           <div class="category__item">
             <div class="category__mask">
-              <div class="category__block">
+              <a href="#" class="category__block">
                 <p>hot deal</p>
                 <p>for men</p>
-              </div>
+              </a>
             </div>
           </div>
 
           <div class="category__item">
             <div class="category__mask">
-              <div class="category__block">
+              <a href="#" class="category__block">
                 <p>new arrivals</p>
                 <p>for kids</p>
-              </div>
+              </a>
             </div>
           </div>
 
           <div class="category__item">
             <div class="category__mask">
-              <div class="category__block">
+              <a href="#" class="category__block">
                 <p>luxirous & trendy</p>
                 <p>accesories</p>
-              </div>
+              </a>
             </div>
           </div>
 
@@ -174,7 +174,7 @@
               <button>Add to Cart</button>
             </div>
 
-            <div class="products__info">
+            <a href="product.html" class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
               </p>
@@ -187,7 +187,7 @@
               <p class="products__price">
                 $52.00
               </p>
-            </div>
+            </a>
           </div>
 
           <div class="products__item">
@@ -199,7 +199,7 @@
               <button>Add to Cart</button>
             </div>
 
-            <div class="products__info">
+            <a href="product.html" class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
               </p>
@@ -212,7 +212,7 @@
               <p class="products__price">
                 $52.00
               </p>
-            </div>
+            </a>
           </div>
 
           <div class="products__item">
@@ -224,7 +224,7 @@
               <button>Add to Cart</button>
             </div>
 
-            <div class="products__info">
+            <a href="product.html" class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
               </p>
@@ -237,7 +237,7 @@
               <p class="products__price">
                 $52.00
               </p>
-            </div>
+            </a>
           </div>
 
           <div class="products__item">
@@ -249,7 +249,7 @@
               <button>Add to Cart</button>
             </div>
 
-            <div class="products__info">
+            <a href="product.html" class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
               </p>
@@ -262,7 +262,7 @@
               <p class="products__price">
                 $52.00
               </p>
-            </div>
+            </a>
           </div>
 
           <div class="products__item">
@@ -274,7 +274,7 @@
               <button>Add to Cart</button>
             </div>
 
-            <div class="products__info">
+            <a href="product.html" class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
               </p>
@@ -287,7 +287,7 @@
               <p class="products__price">
                 $52.00
               </p>
-            </div>
+            </a>
           </div>
 
           <div class="products__item">
@@ -299,7 +299,7 @@
               <button>Add to Cart</button>
             </div>
 
-            <div class="products__info">
+            <a href="product.html" class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
               </p>
@@ -312,7 +312,7 @@
               <p class="products__price">
                 $52.00
               </p>
-            </div>
+            </a>
           </div>
         </div>
 
@@ -349,7 +349,7 @@
       </div>
     </section>
   </main>
-
+2.52
   <!-- ** -->
 
   <footer class="footer">
