--- a/catalog.html
+++ b/catalog.html
@@ -317,7 +317,7 @@
               <button>Add to Cart</button>
             </div>
 
-            <div class="products__info">
+            <a href="product.html" class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
               </p>
@@ -330,7 +330,7 @@
               <p class="products__price">
                 $52.00
               </p>
-            </div>
+            </a>
           </div>
 
           <div class="products__item">
@@ -342,7 +342,7 @@
               <button>Add to Cart</button>
             </div>
 
-            <div class="products__info">
+            <a href="product.html" class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
               </p>
@@ -355,7 +355,7 @@
               <p class="products__price">
                 $52.00
               </p>
-            </div>
+            </a>
           </div>
 
           <div class="products__item">
@@ -367,7 +367,7 @@
               <button>Add to Cart</button>
             </div>
 
-            <div class="products__info">
+            <a href="product.html" class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
               </p>
@@ -380,7 +380,7 @@
               <p class="products__price">
                 $52.00
               </p>
-            </div>
+            </a>
           </div>
 
           <div class="products__item">
@@ -392,7 +392,7 @@
               <button>Add to Cart</button>
             </div>
 
-            <div class="products__info">
+            <a href="product.html" class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
               </p>
@@ -405,7 +405,7 @@
               <p class="products__price">
                 $52.00
               </p>
-            </div>
+            </a>
           </div>
 
           <div class="products__item">
@@ -417,7 +417,7 @@
               <button>Add to Cart</button>
             </div>
 
-            <div class="products__info">
+            <a href="product.html" class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
               </p>
@@ -430,7 +430,7 @@
               <p class="products__price">
                 $52.00
               </p>
-            </div>
+            </a>
           </div>
 
           <div class="products__item">
@@ -442,7 +442,7 @@
               <button>Add to Cart</button>
             </div>
 
-            <div class="products__info">
+            <a href="product.html" class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
               </p>
@@ -455,7 +455,7 @@
               <p class="products__price">
                 $52.00
               </p>
-            </div>
+            </a>
           </div>
 
           <div class="products__item">
@@ -467,7 +467,7 @@
               <button>Add to Cart</button>
             </div>
 
-            <div class="products__info">
+            <a href="product.html" class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
               </p>
@@ -480,7 +480,7 @@
               <p class="products__price">
                 $52.00
               </p>
-            </div>
+            </a>
           </div>
 
           <div class="products__item">
@@ -492,7 +492,7 @@
               <button>Add to Cart</button>
             </div>
 
-            <div class="products__info">
+            <a href="product.html" class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
               </p>
@@ -505,7 +505,7 @@
               <p class="products__price">
                 $52.00
               </p>
-            </div>
+            </a>
           </div>
 
           <div class="products__item">
@@ -517,7 +517,7 @@
               <button>Add to Cart</button>
             </div>
 
-            <div class="products__info">
+            <a href="product.html" class="products__info">
               <p class="products__title">
                 ELLERY X M'O CAPSULE
               </p>
@@ -530,7 +530,7 @@
               <p class="products__price">
                 $52.00
               </p>
-            </div>
+            </a>
           </div>
         </div>
 
